--- a/user-management/pom.xml
+++ b/user-management/pom.xml
@@ -101,7 +101,11 @@
     </dependency>
 		
 
-
+ <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-webflux</artifactId>
+    </dependency>
+	
 	</dependencies>
 <dependencyManagement>
 		<dependencies>
