--- a/config-server/src/main/resources/config/taskmanagement.yaml
+++ b/config-server/src/main/resources/config/taskmanagement.yaml
@@ -4,6 +4,9 @@ server:
 mongodb:
   uri: mongodb://localhost:27017/kanbanboard
 
+rabbitmq:
+  host: amqp://localhost:5672
+
 # Eureka instance configuration
 eureka:
   appName: taskmanagement
