--- a/task-management/.env.config
+++ b/task-management/.env.config
@@ -1,5 +1,6 @@
 SERVER_PORT=8000
 MONGODB_URI=mongodb://localhost:27017/kanbanboard
+RABBITMQ_HOST=amqp://localhost:5672
 EUREKA_APPNAME=taskmanagement
 EUREKA_INSTANCEID=taskmanagement-instance-1
 EUREKA_HOSTNAME=localhost
