--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -48,7 +48,12 @@
 			<scope>test</scope>
 		</dependency>
 
-	
+	<dependency>
+    <groupId>io.github.cdimascio</groupId>
+    <artifactId>dotenv-java</artifactId>
+    <version>3.0.2</version>
+</dependency>
+		
 		
 	</dependencies>
 	<dependencyManagement>
