--- a/config-server/src/main/resources/config/usermanagement.yaml
+++ b/config-server/src/main/resources/config/usermanagement.yaml
@@ -5,19 +5,39 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761//eureka/
+    healthcheck:
+      enabled: true
+      url: http://localhost:8080/health
+
   instance:
     hostname: localhost
-    ipAddr: 127.0.0.1
+    appname: user-management
+    instance-id: user-management
 
 spring:
   datasource:
-    url: jdbc:h2:mem:usermanagement
+    url: jdbc:mysql://localhost:3306/myapp_db
+    username: root
+    password: password123
+    driver-class-name: com.mysql.cj.jdbc.Driver
   h2:
     console:
-      enabled: true
+      enabled: false
       path: /h2
+  jpa:
+    hibernate:
+      ddl-auto: update  
 
 management:
   tracing:
     sampling:
       probability: 1.0
+  endpoints:
+    web:
+      exposure:
+        include: info,health
+  health:
+    show-details: always
+    db:
+      enabled: true
+
