--- a/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/src/main/resources/application.yaml
@@ -2,10 +2,4 @@ spring:
   application:
     name: apigateway
   config:
-    import: "optional:configserver:http://localhost:8088"
-
-info:
-  app:
-    name: API Gateway
-    description: Gateway for microservices application
-    version: 1.0.0
+    import: configserver:${CONFIG_SERVER_URL:http://localhost:8088}
