--- a/config-server/src/main/resources/config/usermanagement.yaml
+++ b/config-server/src/main/resources/config/usermanagement.yaml
@@ -4,21 +4,20 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761//eureka/
+      defaultZone: ${EUREKA_SERVER_ADDRESS:http://localhost:8761/eureka}
     healthcheck:
       enabled: true
-      url: http://localhost:8080/health
-
+      url: http://${USER_MANAGEMENT:localhost}:8080/health
   instance:
-    hostname: localhost
     appname: user-management
     instance-id: user-management
+    preferIpAddress: true
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/myapp_db
-    username: root
-    password: password123
+    url: jdbc:mysql://${SQL_HOST:localhost}:3306/myapp_db
+    username: ${MYSQL_USERNAME}
+    password: ${MYSQL_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
   h2:
     console:
@@ -28,7 +27,11 @@ spring:
     hibernate:
       ddl-auto: update  
 
+
 management:
+  zipkin:
+    tracing:  
+      endpoint: ${ZIPKIN_BASE_URL}
   tracing:
     sampling:
       probability: 1.0
