--- a/service-registry/src/main/resources/application.yaml
+++ b/service-registry/src/main/resources/application.yaml
@@ -7,9 +7,9 @@ spring:
 
 eureka:
   instance:
-    hostname: localhost
+    hostname: "${HOSTNAME:localhost}.eureka"
   client:
     register-with-eureka: false
     fetch-registry: false
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: ${EUREKA_SERVER_ADDRESS}
