--- a/task-management/package.json
+++ b/task-management/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.3",
     "cls-hooked": "^4.2.2",
     "dotenv": "^16.4.5",
+    "dotenv-expand": "^12.0.1",
     "eureka-js-client": "^4.5.0",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
