--- a/user-management/src/main/resources/application.yaml
+++ b/user-management/src/main/resources/application.yaml
@@ -2,4 +2,4 @@ spring:
   application:
     name: usermanagement
   config:
-    import: "optional:configserver:http://localhost:8088"
+    import: configserver:${CONFIG_SERVER_URL:http://localhost:8088}
