Added k8s templates and docker files

--- a/k8s/secrets.yaml
+++ b/k8s/secrets.yaml
@@ -7,5 +7,5 @@ data:
   mysql_root_password: cGFzc3dvcmQxMjM=
   mongo_root_username: c3Jpc2hpdDc3Cg==
   mongo_root_password: cGFzc3dvcmQxMjMK
-  gmail_username: a2FuYmFuYm9hcmRieXNyaXNodGlAZ21haWwuY29tCg==
-  gmail_password: cXdyd2lvcnJlZ2txaXdibAo=
+  gmail_username: dummy
+  gmail_password: dummy
