--- a/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/src/main/resources/application.yaml
@@ -3,3 +3,6 @@ spring:
     name: apigateway
   config:
     import: configserver:${CONFIG_SERVER_URL:http://localhost:8088}
+
+microservice:
+  user-management : ${USER_SERVICE}
