--- a/config-server/src/main/resources/config/apigateway.yaml
+++ b/config-server/src/main/resources/config/apigateway.yaml
@@ -7,13 +7,13 @@ spring:
       routes:
         # Route for authentication paths without JWT filter
         - id: auth-service
-          uri: lb://usermanagement
+          uri: ${USER_SERVICE}
           predicates:
             - Path=/auth/**
 
         # Route for paths that require authentication
         - id: user-management
-          uri: lb://usermanagement
+          uri: ${USER_SERVICE}
           predicates:
             - Path=/api/users/**
           filters:
@@ -21,20 +21,12 @@ spring:
 
           # Route for paths that require authentication
         - id: task-management
-          uri: lb://taskmanagement
+          uri: ${TASK_SERVICE}
           predicates:
             - Path=/api/tasks/**
           filters:
             - JWTAuthorizationFilter
 
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: ${EUREKA_SERVER_ADDRESS:http://localhost:8761/eureka}
-  instance:
-    appname: api-gateway
-    instance-id: api-gateway
-    preferIpAddress: true
     
 management:
   zipkin:
