--- a/k8s/task-management-deployment.yaml
+++ b/k8s/task-management-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: task-management-app
-        image: srishti77/task-management:1.1.1
+        image: srishti77/task-management:2.0.0
         imagePullPolicy: Always
 
         ports:
@@ -23,14 +23,14 @@ spec:
         - name: CONFIG_SERVER_URL
           valueFrom:
             configMapKeyRef:
-              name: eureka-cm
+              name: app-config
               key: config_server_url
         - name: SERVICE_NAME
           value: "taskmanagement"     
         - name: ZIPKIN_BASE_URL
           valueFrom:
             configMapKeyRef:
-              name: eureka-cm
+              name: app-config
               key: zipkin_url 
         - name: MONGODB_USERNAME
           valueFrom:
@@ -45,31 +45,14 @@ spec:
         - name: MONGODB_HOST
           valueFrom:
             configMapKeyRef:
-              name: eureka-cm
+              name: app-config
               key: mongodb_host  
-        - name: EUREKA_SERVER_HOST
-          valueFrom:
-            configMapKeyRef:
-              name: eureka-cm
-              key: eureka_host 
-        - name: EUREKA_SERVER_PORT
-          valueFrom:
-            configMapKeyRef:
-              name: eureka-cm
-              key: eureka_port 
         - name: RABBITMQ_URI
           valueFrom:
             configMapKeyRef:
-              name: eureka-cm
+              name: app-config
               key: rabbitmq_uri  
-        - name: TASK_MANAGEMENT_IP
-          valueFrom:
-            fieldRef:
-              fieldPath: status.podIP 
-        - name: TASK_MANAGEMENT_HOST
-          valueFrom:
-            fieldRef:
-              fieldPath: status.podIP                                            
+                                             
 ---
 
 apiVersion: v1
