--- a/user-management/src/main/resources/application.yaml
+++ b/user-management/src/main/resources/application.yaml
@@ -3,3 +3,6 @@ spring:
     name: usermanagement
   config:
     import: configserver:${CONFIG_SERVER_URL:http://localhost:8088}
+
+microservice:
+  task-management : ${TASK_SERVICE:http://localhost:8000}
