--- a/k8s/config-server-deployment.yaml
+++ b/k8s/config-server-deployment.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: config-server-app
-        image: srishti77/config-server:2.0.0
+        image: "ECR_REGISTRY/config-server:IMAGE_TAG" 
         imagePullPolicy: Always
         ports:
         - containerPort: 8088
