--- a/k8s/mongodb-deployment.yaml
+++ b/k8s/mongodb-deployment.yaml
@@ -1,35 +1,3 @@
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: mongodb-persistent-volume
-spec:
-  capacity:
-    storage: 1Gi
-  accessModes:
-    - ReadWriteOnce
-  storageClassName: manual
-  hostPath:
-    path: /mnt/mongodb
-    type: DirectoryOrCreate
-
-
----
-
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: mongodb-pvc
-spec:
-  resources:
-    requests:
-      storage: 1Gi
-  volumeMode: Filesystem
-  storageClassName: manual
-  accessModes:
-    - ReadWriteOnce
-
-
----
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -53,12 +21,18 @@ spec:
           name: mongodb
 
         volumeMounts:
-        - name: mongodb-persistent-storage
+        - name: mongodb-storage
           mountPath: /var/lib/mongo
-      volumes:
-        - name: mongodb-persistent-storage
-          persistentVolumeClaim:
-            claimName: mongodb-pvc
+  volumeClaimTemplates:
+  - metadata:
+      name: mongodb-storage
+    spec:
+      accessModes:
+        - ReadWriteOnce
+      resources:
+        requests:
+          storage: 1Gi
+      storageClassName: gp2
 
 
 ---
