--- a/k8s/task-management-deployment.yaml
+++ b/k8s/task-management-deployment.yaml
@@ -64,7 +64,8 @@ spec:
                 key: rabbitmq_host
       containers:
       - name: task-management-app
-        image: srishti77/task-management:2.0.0
+        image: "ECR_REGISTRY/task-management:IMAGE_TAG" 
+
         imagePullPolicy: Always
 
         ports:
