--- a/k8s/cloud-gateway-deplyment.yaml
+++ b/k8s/cloud-gateway-deplyment.yaml
@@ -51,7 +51,7 @@ spec:
 
       containers:
       - name: cloud-gateway-app
-        image: "ECR_REGISTRY/api-gateway:IMAGE_TAG" 
+        image: ECR_REGISTRY/api-gateway:IMAGE_TAG
         imagePullPolicy: Always
         ports:
         - containerPort: 8060
