--- a/k8s/notification-management-deployment.yaml
+++ b/k8s/notification-management-deployment.yaml
@@ -55,7 +55,7 @@ spec:
 
       containers:
       - name: notification-management-app
-        image: "ECR_REGISTRY/notification-management:IMAGE_TAG" 
+        image: ECR_REGISTRY/notification-management:IMAGE_TAG
         imagePullPolicy: Always
 
         ports:
