--- a/k8s/task-management-deployment.yaml
+++ b/k8s/task-management-deployment.yaml
@@ -12,6 +12,8 @@ spec:
       labels:
         app: task-management-app
     spec:
+      imagePullSecrets:
+      - name: my-ecr-secret
       initContainers:
       - name: wait-for-services
         image: busybox
