--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,9 +3,6 @@ on:
   push:
     branches:
       - main 
-  pull_request:
-    branches:
-      - main
 jobs:
   k8s-deployment:
     runs-on: ubuntu-latest
@@ -79,5 +76,13 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}        
           IMAGE_TAG: ${{ steps.commit.outputs.short }}
         run: |
-          sed -i.bak "s|DOCKER_IMAGE|$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG|g" manifests/hello-app-deployment.yaml && \
+
+          kubectl create secret docker-registry my-ecr-secret \
+          --docker-server=537124970289.dkr.ecr.us-east-1.amazonaws.com \
+          --docker-username=AWS \
+          --docker-password=$(aws ecr get-login-password --region us-east-1) \
+          --docker-email=srishti77@gmail.com>
+          
+          sed -i.bak "s|ECR_REGISTRY|$ECR_REGISTRY|g" k8s/*.yaml
+          sed -i.bak "s|IMAGE_TAG|$IMAGE_TAG|g" k8s/*.yaml
           kubectl apply -f ./k8s/
