--- a/k8s/mysql-deployment.yaml
+++ b/k8s/mysql-deployment.yaml
@@ -30,7 +30,11 @@ spec:
         - name: mysql-init-db
           mountPath: /docker-entrypoint-initdb.d
         - name: ebs-volume
-          mountPath: /data
+          mountPath: /var/lib/mysql
+      volumes:
+        - name: mysql-init-db
+          configMap:
+            name: mysql-init-db
   volumeClaimTemplates:
   - metadata:
       name: ebs-volume
