--- a/.github/workflows/k8-cluster.yml
+++ b/.github/workflows/k8-cluster.yml
@@ -56,11 +56,14 @@ jobs:
             echo "Building and pushing Docker image for $service"
             
             # Go into the service directory
+            ls
+            echo "cd into $service"
             cd $service
+            echo "Files in $service"
             ls
 
             # Build Docker image
-            docker build -t "$ECR_REGISTRY/$service:$IMAGE_TAG" .
+            docker build -t "$ECR_REGISTRY/$service:$IMAGE_TAG" . > /dev/null 2>&1
        
             # Push Docker image to ECR
             docker push "$ECR_REGISTRY/$service:$IMAGE_TAG"
